--- a/nav__links/contact.css
+++ b/nav__links/contact.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: 700px;
     background-color: green;
-    background-image: url(../images/CONTACT.webp);
+    background-image: url(../images/transformacion_digital_dominion.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
