--- a/nav__links/department.css
+++ b/nav__links/department.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: 700px;
     background-color: green;
-    background-image: url(../images/DEPARTMENTS.jpg);
+    background-image: url(../images/LIBRARY.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
