edited the school name and also centre the headmistress image

--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@
     margin-top: 10px;
     display: flex;
     flex-direction: column;
+    align-self: center;
     justify-content: space-between;
 }
 
