updated the html files in the nav link to add the menu icon when viewed on smaller screens

--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@
 }
 
 .navbar {
-    padding-top: 10px;
+    height: 70px;
+    /* padding-top: 10px; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -617,12 +618,8 @@ footer {
 
 
     .inner_footer {
-        padding: 20px 20px;
-        color: white;
-        display: flex;
-        justify-content: space-around;
+
         flex-direction: row;
-        width: 100%;
 
 
     }
