--- a/style.css
+++ b/style.css
@@ -340,19 +340,21 @@
     display: flex;
     flex-direction: column;
     width: inherit;
-    height: 850px;
+    height: auto;
     margin-bottom: 100px;
+    background-color: #FFFF56;
 }
 
 
 .why_star_of_the_east .reason {
-    width: 100%;
-    height: 150px;
+    width: 70%;
+    height: auto;
     margin-bottom: 20px;
     display: flex;
     flex-direction: row;
     color: white;
     text-align: center;
+    align-self: center;
 
 
 }
@@ -363,7 +365,7 @@
 .num4,
 .num5 {
     width: 80px;
-    height: 110px;
+    height: auto;
     background-color: #0b103b;
     border-radius: 40px 0px 0px 40px;
 }
@@ -373,9 +375,9 @@
 .num3,
 .num4,
 .num5 {
-    padding-top: 10px;
+    padding-top: 5px;
     font-weight: bolder;
-    font-size: 60px;
+    font-size: 50px;
 }
 
 .why_star_of_the_east .reason .reason1,
@@ -385,7 +387,7 @@
 .reason5 {
     overflow: hidden;
     width: 100%;
-    height: 110px;
+    height: auto;
     background-color: #0b103b;
     margin-left: 10px;
     text-align: center;
@@ -398,7 +400,6 @@
     height: 40px;
     width: 40px;
     background-color: #0b103b;
-
     border-radius: 20px;
     text-align: center;
     padding-top: 10px;
@@ -412,7 +413,7 @@
 }
 
 footer {
-    height: 620px;
+    height: auto;
     background-color: #0b103b;
     width: 100%;
     z-index: 1;
@@ -429,6 +430,7 @@ footer {
     justify-content: space-around;
     flex-direction: column;
     width: 100%;
+
 
 
 }
