--- a/nav__links/gallery.css
+++ b/nav__links/gallery.css
@@ -1,4 +1,61 @@
 .mainn {
+    width: inherit;
+    height: inherit;
+    display: flex;
+    justify-content: center;
+}
+
+.mainn .gallery {
+    position: relative;
     width: 100%;
-    height: 900px;
+    height: 600px;
+    overflow: scroll;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    margin-bottom: 30px;
+
+
+}
+
+.mainn .gallery .photo {
+    border-radius: 20px;
+    width: 300px;
+    height: 300px;
+    background-color: rgb(255, 255, 255);
+    margin: 20px;
+    box-shadow: 0.5px 0.5px 10px #0b103b;
+}
+
+.mainn .gallery .photo:hover {
+    width: 320px;
+    height: 320px;
+    background-color: #8c8d96;
+    transition: 0.5s;
+
+
+}
+
+
+.album-nav {
+    margin: 10px;
+    width: 300px;
+    display: flex;
+    flex-direction: row;
+    background-color: #0b103b;
+    border-radius: 10px;
+    justify-content: space-around;
+    text-align: center;
+    gap: 20px;
+    color: yellow;
+}
+
+.album-nav ul {
+    list-style: none;
+    display: flex;
+    gap: 10px;
+    color: white;
+
 }
