--- a/nav__links/news.css
+++ b/nav__links/news.css
@@ -23,3 +23,10 @@
     font-size: 18PX;
 
 }
+
+.slide_container button:hover {
+    background-color: #0b103b;
+    color: yellow;
+    border: white solid 2px;
+    transition: 0.5s;
+}
