--- a/nav__links/gallery.css
+++ b/nav__links/gallery.css
@@ -8,7 +8,7 @@
 .mainn .gallery {
     position: relative;
     width: 100%;
-    height: 600px;
+    height: 750px;
     overflow: scroll;
     display: flex;
     flex-direction: row;
@@ -32,7 +32,7 @@
 .mainn .gallery .photo:hover {
     width: 320px;
     height: 320px;
-    background-color: #8c8d96;
+    background-color: #e9eaef;
     transition: 0.5s;
 
 
