this is a massive update running through the nav menu icon and and its on-click event from the main.js file

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .main_header {
     overflow-x: hidden;
-    height: 70px;
+    height: auto;
     background-color: #0b103b;
     position: fixed;
     top: 0px;
@@ -20,7 +20,7 @@
 }
 
 .navbar {
-    height: 70px;
+    height: auto;
     /* padding-top: 10px; */
     display: flex;
     flex-direction: row;
@@ -32,7 +32,7 @@
     display: flex;
     gap: 10px;
     /* background-color: aqua; */
-    flex-basis: 350px;
+    /* flex-basis: 350px; */
 }
 
 .logo img {
@@ -56,7 +56,8 @@
 
 
 .navbar .menu_list {
-    display: none;
+    margin-top: 60px;
+
 }
 
 .navbar .menu_list ul {
@@ -65,7 +66,7 @@
     height: inherit;
     gap: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-self: end;
     font-weight: bold;
 
@@ -100,9 +101,6 @@
     margin-bottom: 5px;
     border-radius: 10px;
 }
-
-
-
 
 
 
@@ -492,8 +490,21 @@ footer {
 
     .navbar .menu_list {
         margin-top: 15px;
-        display: block;
+        display: flex;
         font-size: 14px;
+
+    }
+
+    .navbar .menu_list ul {
+        list-style: none;
+        margin-top: 15px;
+        height: inherit;
+        gap: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-self: end;
+        font-weight: bold;
+
 
     }
 
