updated the about us link in the index.html file

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@
 
 
 .slide_container {
+    margin-top: 70px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -529,6 +530,7 @@ footer {
 
 
     .slide_container {
+        margin-top: 90px;
         display: flex;
         flex-direction: column;
         justify-content: center;
