--- a/style.css
+++ b/style.css
@@ -20,9 +20,7 @@
 }
 
 .navbar {
-    height: 100vh;
-    padding-bottom: 20px;
-    /* padding-top: 10px; */
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -30,6 +28,7 @@
 }
 
 .logo {
+    margin-top: 10px;
     display: flex;
     gap: 10px;
     /* background-color: aqua; */
@@ -57,13 +56,13 @@
 
 
 .navbar .menu_list {
-    margin-top: 60px;
-
+    margin-top: 55px;
+    padding-bottom: 0px;
 }
 
 .navbar .menu_list ul {
     list-style: none;
-    margin-top: 15px;
+    margin-top: 12px;
     height: inherit;
     gap: 20px;
     display: flex;
@@ -72,12 +71,11 @@
     font-weight: bold;
 
 
-
 }
 
+
 .navbar .menu_list ul li {
-    padding: 20px;
-    text-align: center;
+    padding-bottom: 5px;
 }
 
 .navbar .menu_list ul li a {
@@ -92,7 +90,7 @@
 }
 
 .menu-icon {
-    margin-top: 15px;
+    margin-top: 20px;
     width: 50px;
     height: 50px;
     z-index: 5;
@@ -113,7 +111,7 @@
 
 
 .slide_container {
-    margin-top: 70px;
+    margin-top: 65px;
     display: flex;
     flex-direction: column;
     justify-content: center;
