--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 0px 30px;
+    margin: 0px 15px;
 }
 
 .logo {
@@ -61,6 +61,7 @@
 }
 
 .navbar .menu_list ul {
+    overflow: hidden;
     list-style: none;
     margin-top: 12px;
     height: inherit;
@@ -69,6 +70,7 @@
     flex-direction: column;
     justify-self: end;
     font-weight: bold;
+    transition: 0.8s;
 
 
 }
