--- a/style.css
+++ b/style.css
@@ -1158,7 +1158,7 @@
     .main_header {
         /* overflow-x: hidden; */
         height: 90px;
-        background-color: #c5a815;
+        background-color: #0b103b;
         position: fixed;
         top: 0px;
         box-shadow: 0.5px 0.5px 10px black;
