--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 }
 
-
+/*this is for page resizing when the max width of the screen is that of a small hand held device such as smart phones*/
 @media only screen and (max-width: 768px) {
 
     .main_header {
@@ -542,11 +542,62 @@
 
 
 
+/*this is for page resizing when the max width of the screen is that of a tablet*/
+@media only screen and (min-width: 426px) {
+    .inner_footer {
+        padding: 20px 20px;
+        color: white;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+        width: 100%;
+
+
+
+    }
+
+
+
+    .admission_notice {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        background-color: #0b103b;
+        height: 100px;
+        overflow: hidden;
+    }
+
+
+
+    .admission_notice h2 {
+        padding-top: 45px;
+        font-size: 13px;
+        margin-right: 50px;
+        color: #FFFF56;
+        text-align: center;
+
+    }
+
+    .admission_notice button {
+        height: 35px;
+        width: 140px;
+        border: solid #FFFF56 2px;
+        background-color: #0b103b;
+
+        border-radius: 30px;
+        align-self: center;
+        margin-top: 10px;
+
+    }
+
+
+
+}
 
 
 
 
-/*this is for page resizing when the max width of the screen is that of a phone and other small screened devices*/
+/*this is for page resizing when the screen width is greater than that of a tablet*/
 @media only screen and (min-width: 769px) {
 
     .main_header {
@@ -698,8 +749,8 @@
     }
 
     .admission_notice h2 {
-        margin-top: 30px;
-        font-size: 30px;
+        margin-top: 0px;
+        font-size: 25px;
 
         color: #FFFF56;
         text-align: center;
@@ -1267,7 +1318,7 @@
         justify-content: center;
         position: relative;
         width: 100%;
-        height: 1000px;
+        height: 900px;
         background-image: url(./images/Pivot-Point-Family-Growth-Centre-Benefits-of-Smaller-Class-Sizes.jpg);
         background-repeat: no-repeat;
         background-size: cover;
@@ -1280,7 +1331,7 @@
     .slide_container H2 {
         margin-top: 200px;
         color: WHITE;
-        font-size: 70PX;
+        font-size: 60PX;
         font-weight: bolder;
         text-align: center;
 
@@ -1304,7 +1355,7 @@
     }
 
     .admission_notice h2 {
-        margin-top: 30px;
+        margin-top: 0px;
         font-size: 30px;
 
         color: #FFFF56;
@@ -1351,11 +1402,8 @@
     }
 
     .main {
-        margin: 0px 20%;
+        margin: 0px 15%;
         position: relative;
-
-
-        display: block;
 
     }
 
@@ -1396,6 +1444,7 @@
     }
 
     .about_text {
+        padding-top: 20px;
         width: 100%;
         color: black;
         text-align: justify;
@@ -1521,7 +1570,7 @@
         flex-direction: column;
         width: inherit;
         height: auto;
-        margin-bottom: 100px;
+        margin: 0px 20% 100px 20%;
 
     }
 
@@ -1610,6 +1659,7 @@
         justify-content: space-around;
         flex-direction: row;
         width: 100%;
+        margin: ;
 
 
 
