--- a/nav__links/admission.css
+++ b/nav__links/admission.css
@@ -1,6 +1,7 @@
 .mainn {
     width: 100%;
-    height: 900px;
+    height: auto;
+
 }
 
 .slide_container {
@@ -32,4 +33,30 @@
     color: yellow;
     border: white solid 2px;
     transition: 0.5s;
+}
+
+
+.admission_steps {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+
+}
+
+.admission_steps .step h1 {
+    font-size: 80px;
+}
+
+.admission_steps .step {
+    margin: 20px;
+    background-color: #0b103b;
+    width: 300PX;
+    height: auto;
+    color: white;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 1px 1px 10px #0b103b;
+
 }
