--- a/nav__links/admission.css
+++ b/nav__links/admission.css
@@ -13,8 +13,8 @@
 
 
 .slide_container button {
-    height: 50px;
-    width: 140px;
+    height: 30px;
+    width: 100px;
     border: solid #FFFF56 2px;
     background-color: transparent;
     margin: 30px 30px;
@@ -22,7 +22,7 @@
     color: white;
     align-self: center;
     font-weight: bolder;
-    font-size: 18PX;
+    font-size: 12PX;
     cursor: pointer;
 
 }
@@ -41,12 +41,34 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-bottom: 40px;
 
 
 }
 
+.admission_steps .step button {
+    height: 30px;
+    width: 120px;
+    background-color: yellow;
+    color: #0b103b;
+    border-radius: 5px;
+    font-weight: bolder;
+}
+
+.admission_steps .step_title {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
 .admission_steps .step h1 {
     font-size: 80px;
+}
+
+.admission_steps .step span {
+    position: relative;
+    top: 20px;
+    color: #FFFF56;
 }
 
 .admission_steps .step {
