--- a/nav__links/contact.css
+++ b/nav__links/contact.css
@@ -1,8 +1,7 @@
 .mainn {
     width: 100%;
     height: auto;
-    margin-top: 80px;
-    padding: 20px;
+    margin-top: 30px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -17,8 +16,8 @@
 }
 
 .slide_container button {
-    height: 50px;
-    width: 140px;
+    height: 30px;
+    width: 120px;
     border: solid #FFFF56 2px;
     background-color: transparent;
     margin: 30px 30px;
@@ -26,7 +25,7 @@
     color: white;
     align-self: center;
     font-weight: bolder;
-    font-size: 18PX;
+    font-size: 12PX;
 
 }
 
@@ -43,20 +42,21 @@
     display: flex;
     flex-direction: row;
     gap: 50px;
+    flex-wrap: wrap;
 }
 
 .contact_details {
-    margin: 30px;
+    margin: 10px;
 }
 
 .contact_form {
     width: 400px;
-    height: 400px;
-    /* background-color: #FFFF56; */
+    height: auto;
     border-radius: 20px;
     box-shadow: 1px 1px 10px rgb(4, 4, 60);
-    padding: 30px;
-    margin: 30px;
+    padding: 20px;
+    margin: 30px 5px;
+
 }
 
 .contact_form #title {
@@ -80,11 +80,11 @@
 
 .contact_form button {
     margin-top: 30px;
-    background-color: blue;
-    color: white;
+    background-color: #0b103b;
+    color: #FFFF56;
     height: 25px;
     width: 100px;
     border: opx solid;
     border-radius: 10px;
-    box-shadow: 0.1px 0.1px 5px blue;
+
 }
