animation for the h and p tag in the slide container

--- a/nav__links/department.css
+++ b/nav__links/department.css
@@ -10,16 +10,4 @@
 
 }
 
-.slide_container button {
-    height: 50px;
-    width: 140px;
-    border: solid #FFFF56 2px;
-    background-color: transparent;
-    margin: 30px 30px;
-    border-radius: 30px;
-    color: white;
-    align-self: center;
-    font-weight: bolder;
-    font-size: 18PX;
-
-}
+.slide_container button {}
