--- a/nav__links/admission.css
+++ b/nav__links/admission.css
@@ -12,20 +12,7 @@
 }
 
 
-.slide_container button {
-    height: 30px;
-    width: 100px;
-    border: solid #FFFF56 2px;
-    background-color: transparent;
-    margin: 30px 30px;
-    border-radius: 30px;
-    color: white;
-    align-self: center;
-    font-weight: bolder;
-    font-size: 12PX;
-    cursor: pointer;
-
-}
+.slide_container button {}
 
 
 .slide_container button:hover {
