--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 /*this is for page resizing when the max width of the screen is that of a small hand held device such as smart phones*/
-
+/* 
 @media only screen and (min-width: 320px) and (max-width: 426px) {
 
     .main_header {
@@ -504,7 +504,7 @@
     .copyright_info {
         text-align: center;
     }
-}
+} */
 
 
 
@@ -520,8 +520,492 @@
 
 
 /*this is for page resizing when the max width of the screen is that of a tablet*/
-/* 
-@media only screen and (min-width: 426px) {
+
+@media only screen and (min-width: 427px) and (max-width: 768px) {
+    .main_header {
+        overflow-x: hidden;
+        height: auto;
+        background-color: #0b103b;
+        position: fixed;
+        top: 0px;
+        box-shadow: 0.5px 0.5px 10px black;
+        width: 100%;
+        z-index: 3;
+        transition: 0.6s;
+
+    }
+
+    .navbar {
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 0px 15px;
+    }
+
+    .logo {
+        margin-top: 10px;
+        display: flex;
+        gap: 10px;
+
+    }
+
+    .logo img {
+        margin-top: 10px;
+        height: 40px;
+        width: 40px;
+
+    }
+
+    .school_name {
+        font-weight: bold;
+        padding-top: 14px;
+        color: white;
+        font-size: 10px;
+
+    }
+
+    .school_name #inst_type {
+        color: #FFFF56;
+    }
+
+
+    .navbar .menu_list {
+        margin-top: 55px;
+        padding-bottom: 0px;
+    }
+
+    .navbar .menu_list ul {
+        overflow: hidden;
+        list-style: none;
+        margin-top: 12px;
+        height: inherit;
+        gap: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-self: end;
+        font-weight: bold;
+        transition: 0.8s;
+
+
+    }
+
+
+    .navbar .menu_list ul li {
+        padding-bottom: 5px;
+    }
+
+    .navbar .menu_list ul li a {
+
+        color: #FFFF56;
+        text-decoration: none;
+        transition-duration: 0.5s;
+    }
+
+    .navbar .menu_list ul li a:hover {
+        color: white;
+    }
+
+    .menu-icon {
+        margin-top: 20px;
+        width: 50px;
+        height: 50px;
+        z-index: 5;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .menu-icon .menu-icon-bar {
+        height: 3px;
+        width: 30px;
+        background-color: #FFFF56;
+        margin-bottom: 5px;
+        border-radius: 10px;
+    }
+
+
+
+
+    .slide_container {
+        margin-top: 65px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        width: 100%;
+        height: 300px;
+        background-image: url(./images/Pivot-Point-Family-Growth-Centre-Benefits-of-Smaller-Class-Sizes.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        overflow-x: hidden;
+
+    }
+
+
+
+    .slide_container H2 {
+        position: absolute;
+        align-self: center;
+        margin-top: 0px;
+        color: WHITE;
+        font-size: 15PX;
+        font-weight: bolder;
+        text-align: center;
+        animation-name: slide_h;
+        animation-duration: 2s;
+        /* animation-delay: s; */
+
+
+    }
+
+    @keyframes slide_h {
+        from {
+            margin-top: -300px;
+        }
+
+        to {
+            margin-top: 0px;
+        }
+    }
+
+    .slide_container p {
+        position: absolute;
+        align-self: center;
+        margin-top: 50px;
+        color: #ffffff;
+        font-weight: bolder;
+        font-size: 15px;
+        text-align: center;
+        animation-name: slide_p;
+        animation-duration: 2s;
+        /* animation-delay: 1s; */
+
+    }
+
+    @keyframes slide_p {
+        from {
+            color: #0b103b;
+        }
+
+        to {
+            color: #ffffff;
+        }
+    }
+
+    .slide_container button a {
+        color: white;
+        text-decoration: none;
+    }
+
+    .slide_container button {
+        position: absolute;
+        align-self: center;
+        height: 30px;
+        width: 100px;
+        border: solid #FFFF56 2px;
+        background-color: transparent;
+        margin-top: 120px;
+        border-radius: 30px;
+        color: white;
+        align-self: center;
+        font-weight: bolder;
+        font-size: 12PX;
+        cursor: pointer;
+    }
+
+    .admission_notice {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 100px;
+        background-color: #0b103b;
+        height: auto;
+        overflow: hidden;
+        padding: 10px;
+    }
+
+    .admission_notice h2 {
+        font-size: 13px;
+        padding-top: 15px;
+
+        color: #FFFF56;
+        text-align: center;
+
+    }
+
+    .admission_notice button {
+        height: 30px;
+        width: 100px;
+        border: solid #FFFF56 2px;
+        background-color: #0b103b;
+
+        border-radius: 30px;
+        align-self: center;
+        margin-top: 10px;
+
+    }
+
+
+    .admission_notice button a {
+        color: white;
+        text-decoration: none;
+        font-size: 12px;
+        font-weight: bolder;
+    }
+
+    .main {
+        margin: 0px 5%;
+        position: relative;
+
+
+        display: block;
+
+    }
+
+    .main h2 {
+        text-align: center;
+        font-size: 25px;
+        font-weight: bold;
+        color: #0b103b;
+        margin-bottom: 40px;
+    }
+
+
+
+    .about_us {
+
+        margin-bottom: 100px;
+    }
+
+    .about_msg {
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        justify-content: space-between;
+    }
+
+    .headmistress_image {
+        width: 250px;
+        height: 200px;
+        margin: 0PX 20px;
+        background-color: #0b103b;
+        border-radius: 20px;
+        background-size: cover;
+        background-position: center;
+        background-image: url(./images/NEWPRINCIPAL.jpg);
+        background-repeat: no-repeat;
+        align-self: center;
+    }
+
+    .about_text {
+        width: 100%;
+        color: black;
+        text-align: justify;
+        line-height: 30px;
+        margin-top: 10px;
+
+
+    }
+
+
+
+    .mission_vision {
+
+        color: white;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 90px;
+        margin-bottom: 100px;
+    }
+
+    .mission_vision img {
+        height: 80px;
+        width: 80px;
+    }
+
+    .mission_vision h2 {
+        text-align: center;
+
+    }
+
+    .mission_vision .Mission {
+        overflow: hidden;
+        padding: 20px;
+        height: 300px;
+        width: 250px;
+        color: black;
+        border-radius: 20px;
+        align-self: center;
+        box-shadow: 3px 3px 10px #0b103b;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .Vision p,
+    .Mission p {
+        position: relative;
+        top: 10px;
+
+    }
+
+    .mission_vision h3 {
+        margin-top: 20px;
+        font-size: 35px;
+    }
+
+    .mission_vision .Vision {
+        overflow: hidden;
+        z-index: 1;
+        padding: 20px;
+        height: 300px;
+        width: 250px;
+        color: black;
+        border-radius: 20px;
+        margin: 10px;
+        box-shadow: 3px 3px 10px #0b103b;
+        align-self: center;
+        font-weight: bold;
+        text-align: center;
+    }
+
+
+
+    .core_values {
+
+        color: black;
+
+        display: flex;
+
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 100px;
+    }
+
+    .core_values img {
+        height: 80px;
+        width: 80px;
+    }
+
+    .core_values .value {
+
+        margin: 10px;
+        font-weight: bold;
+        height: 300px;
+        width: 200px;
+        border-radius: 20px;
+        padding: 10px;
+        box-shadow: 3px 3px 10px #0b103b;
+        overflow: hidden;
+
+    }
+
+
+
+    .core_values h3 {
+        padding: 3px 0px;
+        position: relative;
+        top: 10px;
+        font-size: 25px;
+        color: #0b103b;
+    }
+
+    .core_values p {
+        position: relative;
+        top: 20PX;
+    }
+
+    .why_star_of_the_east {
+        display: flex;
+        flex-direction: column;
+        width: inherit;
+        height: auto;
+        margin-bottom: 100px;
+
+    }
+
+
+    .why_star_of_the_east .reason {
+        width: 100%;
+        height: auto;
+        margin: 20px 0PX;
+        display: flex;
+        flex-direction: row;
+        color: white;
+        text-align: center;
+        align-self: center;
+
+
+    }
+
+    .why_star_of_the_east .reason .num1,
+    .num2,
+    .num3,
+    .num4,
+    .num5 {
+        width: 80px;
+        height: auto;
+        background-color: #0b103b;
+        border-radius: 40px 0px 0px 40px;
+    }
+
+    .why_star_of_the_east .reason .num1,
+    .num2,
+    .num3,
+    .num4,
+    .num5 {
+        padding-top: 10px;
+        font-weight: bolder;
+        font-size: 50px;
+    }
+
+    .why_star_of_the_east .reason .reason1,
+    .reason2,
+    .reason3,
+    .reason4,
+    .reason5 {
+        overflow: hidden;
+        width: 100%;
+        height: auto;
+        background-color: #0b103b;
+        margin-left: 10px;
+        text-align: justify;
+        padding: 15px;
+        border-radius: 0px 40px 40px 0px;
+        font-size: 15PX;
+    }
+
+    .move_to_top {
+        height: 40px;
+        width: 40px;
+        background-color: #0b103b;
+        border-radius: 20px;
+        text-align: center;
+        padding-top: 10px;
+        position: absolute;
+        right: 0px;
+    }
+
+    .move_to_top a {
+        color: white;
+        text-decoration: none;
+    }
+
+    footer {
+        height: auto;
+        background-color: #0b103b;
+        width: 100%;
+        z-index: 1;
+        overflow-x: hidden;
+        position: relative;
+
+
+    }
+
     .inner_footer {
         padding: 20px 20px;
         color: white;
@@ -535,41 +1019,57 @@
     }
 
 
-
-    .admission_notice {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        background-color: #0b103b;
-        height: 100px;
-        overflow: hidden;
-    }
-
-
-
-    .admission_notice h2 {
-        padding-top: 45px;
-        font-size: 13px;
-        margin-right: 50px;
+    .inner_footer .school_name #inst_type {
         color: #FFFF56;
-        text-align: center;
-
     }
 
-    .admission_notice button {
-        height: 35px;
-        width: 140px;
-        border: solid #FFFF56 2px;
-        background-color: #0b103b;
-        border-radius: 30px;
+    .inner_footer h4 {
+        line-height: 30px;
+        font-size: 12px;
+    }
+
+    .inner_footer .school_contact_info .logo {
         align-self: center;
-        margin-top: 10px;
+    }
+
+    .inner_footer .school_links .navs ul {
+        list-style: none;
+        line-height: 30px;
+
+    }
+
+    .inner_footer .school_links .navs ul a {
+        text-decoration: none;
+        color: white;
+    }
+
+    .inner_footer .social_links {
+        display: flex;
+        gap: 10px;
 
     }
 
 
+    .inner_footer .school_links img {
+        height: 30px;
+        width: 30px;
+    }
 
-} */
+    .inner_footer .school_links h4 {
+        color: yellow;
+
+    }
+
+    .inner_footer .social_links a {
+        text-decoration: none;
+        color: white;
+    }
+
+    .copyright_info {
+        text-align: center;
+    }
+
+}
 
 
 
